# ansible-mac-desktop

./: .gitignore  LICENSE  Makefile  README.md  ansible.cfg  default.config.yml  hosts.yml  justfile  playbook.yml  pyproject.toml  requirements.yml
roles/main/tasks/: asdf.yml  brew.yml  docker.yml  home_folders.yml  homeschick.yml  main.yml  pipx.yml  pyenv.yml  rust.yml  vscode.yml  zsh.yml
